--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Wilfred Tonye",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "sequelize": "^6.32.0"
   },
